--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header id="main-header" class="frosted sharp">
     <div class="container header-flex">
-      <div class="brand">My Website Brand</div>
+      <div class="brand">WILLIE MANYAME</div>
       <nav id="nav-menu">
         <ul>
           <li><a href="index.html" class="nav-link active">Home</a></li>
@@ -84,3 +84,4 @@
   </script>
 </body>
 </html>
+
